Fix video spacing and play button alignment

--- a/frontend/bulmapress/viame.sass
+++ b/frontend/bulmapress/viame.sass
@@ -1,4 +1,13 @@
 /* ========================= */
+/* Helpers
+/* ========================= */
+
+.vcenter-child
+  align-items: center
+  display: flex
+
+
+/* ========================= */
 /* Typography Styles
 /* ========================= */
 
